--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,8 @@ http {
     # Logging Settings
     ##
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log warn;
+    access_log /data/logs/nginx/access.log;
+    error_log /data/logs/nginx/error.log warn;
 
     # Compression
 
@@ -88,5 +88,5 @@ http {
     # text/html is always compressed by HttpGzipModule
 
     include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
+    include /data/config/sites/*;
 }
