--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,8 @@ http {
     # Logging Settings
     ##
 
-    access_log /data/logs/nginx.access.log;
-    error_log /data/logs/nginx.error.log warn;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 
     # Compression
 
